# tyk-docs

./: .gitattributes  .gitignore  .htmltest.yml  .prettierignore  .prettierrc  .spellcheck.yaml  .vale.ini  .visor-metadata.json  .visor.yaml  .wordlist.txt  CLAUDE.md  CONTRIBUTING-TECHNICAL-GUIDE.md  CONTRIBUTING.md  DatabaseCalculator.mdx  README.md  RedisCalculator.mdx  Taskfile.yml  _redirects  advanced-configuration.mdx  apim.mdx  basic-config-and-security.mdx  branches-config.json  content.mdx  context-variables.mdx  control-data-plane-architecture.mdx  dashboard-admin-api.mdx  docker-compose.yml  docs.json  error-response-codes.mdx  getting-started.mdx  graphql.mdx  index.mdx  kapa-widget.js  log-data.mdx  lychee.toml  merge_docs_configs.py  old-index.mdx  outdated-version-banner.css  outdated-version-banner.js  plan-your-api-integration.mdx  (+32 more)
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.probe/: writer.md
5.10/: apim.mdx  dashboard-admin-api.mdx  index.mdx  plan-your-api-integration.mdx  planning-for-production.mdx  tyk-apis.mdx  tyk-cloud.mdx  tyk-components.mdx  tyk-dashboard-api.mdx  tyk-mdcb-api.mdx  tyk-open-source.mdx  tyk-overview.mdx  (+4 more)
scripts/release-notes-generator/: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/release-notes-generator/release_notes_generator/: __init__.py  __main__.py  ai_enhancer.py  categorizer.py  cli.py  config.py  file_inserter.py  jira_client.py  models.py  pr_creator.py  renderer.py
scripts/release-notes-generator/tests/: test_categorizer.py  test_file_inserter.py  test_renderer.py
(+9552 files in other folders)
