[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "release-notes-generator"
version = "0.1.0"
description = "Generate Tyk release notes from Jira tickets"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0", "anthropic>=0.40.0", "PyGithub>=2.1.0", "rich>=13.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
release-notes-generator = "release_notes_generator.cli:main"
